[metadata]
name = unzer
version = attr: unzer.__version__
author = Sven Eberth
author_email = se@mausbrand.de
maintainer = Sven Eberth
maintainer_email = se@mausbrand.de
description = An unofficial python SDK for unzer.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mausbrand/unzer-python-sdk
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.10
package_dir =
    = src
